[package]
name = "expr-std-channels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
humantime = "2.1.0"
log = "0.4.17"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench1"
harness = false
